--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -86,6 +86,9 @@ nova::cron::archive_deleted_rows::destination: '/dev/null'
 # cinder
 cinder::scheduler::scheduler_driver: cinder.scheduler.filter_scheduler.FilterScheduler
 cinder::cron::db_purge::destination: '/dev/null'
+cinder::config::cinder_config:
+  DEFAULT/host:
+    value: hostgroup
 
 # heat
 heat::engine::configure_delegated_roles: false
