Set 'host' globally in Cinder instead of per-backend basis
This change will set a common value for 'host' across all
controllers. We missed to do so for the NFS backend previously.

It will still be possible to set a different per-backend 'host'
value by providing it via ExtraData.

Change-Id: I00fd05660a15be3611e1a394650be6ab713670f9

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -95,6 +95,9 @@ ceilometer::agent::auth::auth_endpoint_type: 'internalURL'
 # cinder
 cinder::scheduler::scheduler_driver: cinder.scheduler.filter_scheduler.FilterScheduler
 cinder::cron::db_purge::destination: '/dev/null'
+cinder::config::cinder_config:
+  DEFAULT/host:
+    value: hostgroup
 
 # heat
 heat::engine::configure_delegated_roles: false
