Increase default netdev_max_backlog to 10x
It has been observed that on large clouds the netdev backlog
buffer might overflow. This change increases the default by ten
times.

The /proc/net/softnet_stat file contains a counter in the 2nd
column that is incremented when the netdev backlog queue overflows.
If this value is incrementing over time, then netdev_max_backlog
needs to be increased [1].

[1]. https://bugzilla.redhat.com/show_bug.cgi?id=1283676

Change-Id: Iec12324fd3a24e8b608b1e1849c270cc24cb0e60
(cherry picked from commit 42fef7257ddceaca42086d8f6b75a19e61cbf68d)

--- a/puppet/hieradata/common.yaml
+++ b/puppet/hieradata/common.yaml
@@ -33,6 +33,8 @@ sysctl_settings:
     value: 0
   net.ipv6.conf.default.autoconf:
     value: 0
+  net.core.netdev_max_backlog:
+    value: 10000
 
 nova::rabbit_heartbeat_timeout_threshold: 60
 neutron::rabbit_heartbeat_timeout_threshold: 60
