--- a/puppet/hieradata/common.yaml
+++ b/puppet/hieradata/common.yaml
@@ -8,8 +8,8 @@ ceilometer::agent::auth::auth_region: 'regionOne'
 ceilometer::agent::auth::auth_tenant_name: 'admin'
 
 nova::api::admin_tenant_name: 'service'
-nova::network::neutron::neutron_admin_tenant_name: 'service'
-nova::network::neutron::neutron_admin_username: 'neutron'
+nova::network::neutron::neutron_project_name: 'service'
+nova::network::neutron::neutron_username: 'neutron'
 nova::network::neutron::dhcp_domain: ''
 
 neutron::allow_overlapping_ips: true
