Allow for usage of pre-allocated IPs for the management network
Id3d4f12235501ae77200430a2dc022f378dce336 added support for pre-allocated
IPs on the other overlay networks, but because the patch adding the
managment network (I0813a13f60a4f797be04b34258a2cffa9ea7e84f) was
under review around the same time, we missed adding the from_pool
capability to the ManagementNetwork.

Change-Id: If99f37634d5da7e7fb7cfc31232e926bd5ff074a

--- a/network/ports/management.yaml
+++ b/network/ports/management.yaml
@@ -16,6 +16,12 @@ parameters:
   ControlPlaneIP: # Here for compatibility with noop.yaml
     description: IP address on the control plane
     type: string
+  IPPool: # Here for compatibility with from_pool.yaml
+    default: {}
+    type: json
+  NodeIndex: # Here for compatibility with from_pool.yaml
+    default: 0
+    type: number
 
 resources:
 
