--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -794,6 +794,8 @@ resources:
   ManagementPort:
     type: OS::TripleO::Controller::Ports::ManagementPort
     properties:
+      IPPool: {get_param: ControllerIPs}
+      NodeIndex: {get_param: NodeIndex}
       ControlPlaneIP: {get_attr: [Controller, networks, ctlplane, 0]}
 
   NetIpMap:
