Rename tox env to pep8
It turns out the linters rename was a bit premature[1].  Use the
current standard pep8 name so we don't need custom jobs in the
gate to run this test on proposed changes.

Change-Id: I5226d4c5e3d4095d76cba24fcf27f87c59730587
1: http://lists.openstack.org/pipermail/openstack-dev/2016-February/086268.html

--- a/tox.ini
+++ b/tox.ini
@@ -10,5 +10,5 @@ deps = -r{toxinidir}/requirements.txt
 [testenv:venv]
 commands = {posargs}
 
-[testenv:linters]
+[testenv:pep8]
 commands = python ./tools/yaml-validate.py .
