Enable heat-manage purge_deleted cron job
Without this the heat database tables will grow without limit.

Change-Id: I687e733db1a73ebc2047609a03be768093010dd4
Depends-On: Ia2b80e5003450cd794ebb0c9ca72200ec8616e81
(cherry picked from commit 04cc409c01270fde4703a921a429113e86353864)

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -101,6 +101,10 @@ heat::engine::configure_delegated_roles: false
 heat::engine::trusts_delegated_roles: []
 heat::instance_user: ''
 heat::notification_driver: 'messaging'
+heat::cron::purge_deleted::age: 30
+heat::cron::purge_deleted::age_type: 'days'
+heat::cron::purge_deleted::maxdelay: 3600
+heat::cron::purge_deleted::destination: '/dev/null'
 
 # pacemaker
 pacemaker::corosync::cluster_name: 'tripleo_cluster'
