Pass public_addr to ceph::profile::params instead of ceph::mon
The ceph::mon resource is a define not a class so the hieradata is
not applied transparently; this change passes it to
ceph::profile::params instead which is a class.

Change-Id: Ia6518b769feb147f862b67915432d1bb7b47a415
Depends-On: I56f969328c68ed83a9b2d54ff4254dbcd6f55de0
(cherry picked from commit e0fd678de5b862bd4c385f636b3e29a981e1455a)

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -1252,7 +1252,7 @@ resources:
               mapped_data:
                 ceph::profile::params::cluster_network: {get_input: ceph_cluster_network}
                 ceph::profile::params::public_network: {get_input: ceph_public_network}
-                ceph::mon::public_addr: {get_input: ceph_public_ip}
+                ceph::profile::params::public_addr: {get_input: ceph_public_ip}
             database:
               raw_data: {get_file: hieradata/database.yaml}
             object:
