--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -1208,6 +1208,7 @@ resources:
             - midonet_data #Optionally provided by AllNodesExtraConfig
             - neutron_opencontrail_data # Optionally provided by ControllerExtraConfigPre
             - neutron_plumgrid_data # Optionally provided by ControllerExtraConfigPre
+          merge_behavior: deeper
           datafiles:
             service_configs:
               mapped_data: {get_param: ServiceConfigSettings}
