Set notification driver for nova to send
Currently since nova compute is not configured to
send notifications to ceilometer, tempest tests
fail on tempest.api.telemetry.test_telemetry_notification_api.

Change-Id: I763b7d246ae3f5955b6f555c8fd107d2cac89787
(cherry picked from commit a5c40e361c4b6abf8b081fb64d92ed9abe521cca)

--- a/puppet/hieradata/compute.yaml
+++ b/puppet/hieradata/compute.yaml
@@ -1,7 +1,7 @@
 # Hiera data here applies to all compute nodes
 
 nova::notify_on_state_change: 'vm_and_task_state'
-
+nova::notification_driver: messagingv2
 nova::compute::enabled: true
 nova::compute::instance_usage_audit: true
 nova::compute::instance_usage_audit_period: 'hour'
