Don't have separate protocols/ports for Keystone v3
The change in ab068a824ed51e78bf111387223e58e885ec5c84 is described as
temporary, so it would be better if it did not affect the EndpointMap
parameter (which is effectively a public interface, since it may be
overridden in an environment file). No configuration should end up with
different ports/protocols/hosts for Keystone v2 and v3, and somebody
customising them should not have to account for them separately. Nor
should things break when the need to distinguish between v2 and v3
endpoints goes away.

This change removes the KeystoneV3* keys from the EndpointMap input and
uses the Keystone* keys instead, so that any change to the internal
organisation becomes transparent to the user.

Change-Id: If4cdd9232f4dbc9f2af651bbdfe68f09dc26ed2e

--- a/network/endpoints/endpoint_map.yaml
+++ b/network/endpoints/endpoint_map.yaml
@@ -43,9 +43,6 @@ parameters:
       KeystoneAdmin: {protocol: http, port: '35357', host: IP_ADDRESS}
       KeystoneInternal: {protocol: http, port: '5000', host: IP_ADDRESS}
       KeystonePublic: {protocol: http, port: '5000', host: IP_ADDRESS}
-      KeystoneV3Admin: {protocol: http, port: '35357', host: IP_ADDRESS}
-      KeystoneV3Internal: {protocol: http, port: '5000', host: IP_ADDRESS}
-      KeystoneV3Public: {protocol: http, port: '5000', host: IP_ADDRESS}
       NeutronAdmin: {protocol: http, port: '9696', host: IP_ADDRESS}
       NeutronInternal: {protocol: http, port: '9696', host: IP_ADDRESS}
       NeutronPublic: {protocol: http, port: '9696', host: IP_ADDRESS}
@@ -963,119 +960,119 @@ outputs:
         host:
           str_replace:
             template:
-              get_param: [EndpointMap, KeystoneV3Admin, host]
+              get_param: [EndpointMap, KeystoneAdmin, host]
             params:
               CLOUDNAME: {get_param: CloudName}
               IP_ADDRESS: {get_param: KeystoneAdminApiVirtualIP}
         port:
-          get_param: [EndpointMap, KeystoneV3Admin, port]
+          get_param: [EndpointMap, KeystoneAdmin, port]
         protocol:
-          get_param: [EndpointMap, KeystoneV3Admin, protocol]
+          get_param: [EndpointMap, KeystoneAdmin, protocol]
         uri:
           list_join:
           - ''
-          - - get_param: [EndpointMap, KeystoneV3Admin, protocol]
+          - - get_param: [EndpointMap, KeystoneAdmin, protocol]
             - ://
             - str_replace:
                 template:
-                  get_param: [EndpointMap, KeystoneV3Admin, host]
+                  get_param: [EndpointMap, KeystoneAdmin, host]
                 params:
                   CLOUDNAME: {get_param: CloudName}
                   IP_ADDRESS: {get_param: KeystoneAdminApiVirtualIP}
             - ':'
-            - get_param: [EndpointMap, KeystoneV3Admin, port]
+            - get_param: [EndpointMap, KeystoneAdmin, port]
             - /v3
         uri_no_suffix:
           list_join:
           - ''
-          - - get_param: [EndpointMap, KeystoneV3Admin, protocol]
+          - - get_param: [EndpointMap, KeystoneAdmin, protocol]
             - ://
             - str_replace:
                 template:
-                  get_param: [EndpointMap, KeystoneV3Admin, host]
+                  get_param: [EndpointMap, KeystoneAdmin, host]
                 params:
                   CLOUDNAME: {get_param: CloudName}
                   IP_ADDRESS: {get_param: KeystoneAdminApiVirtualIP}
             - ':'
-            - get_param: [EndpointMap, KeystoneV3Admin, port]
+            - get_param: [EndpointMap, KeystoneAdmin, port]
       KeystoneV3Internal:
         host:
           str_replace:
             template:
-              get_param: [EndpointMap, KeystoneV3Internal, host]
+              get_param: [EndpointMap, KeystoneInternal, host]
             params:
               CLOUDNAME: {get_param: CloudName}
               IP_ADDRESS: {get_param: KeystonePublicApiVirtualIP}
         port:
-          get_param: [EndpointMap, KeystoneV3Internal, port]
+          get_param: [EndpointMap, KeystoneInternal, port]
         protocol:
-          get_param: [EndpointMap, KeystoneV3Internal, protocol]
+          get_param: [EndpointMap, KeystoneInternal, protocol]
         uri:
           list_join:
           - ''
-          - - get_param: [EndpointMap, KeystoneV3Internal, protocol]
+          - - get_param: [EndpointMap, KeystoneInternal, protocol]
             - ://
             - str_replace:
                 template:
-                  get_param: [EndpointMap, KeystoneV3Internal, host]
+                  get_param: [EndpointMap, KeystoneInternal, host]
                 params:
                   CLOUDNAME: {get_param: CloudName}
                   IP_ADDRESS: {get_param: KeystonePublicApiVirtualIP}
             - ':'
-            - get_param: [EndpointMap, KeystoneV3Internal, port]
+            - get_param: [EndpointMap, KeystoneInternal, port]
             - /v3
         uri_no_suffix:
           list_join:
           - ''
-          - - get_param: [EndpointMap, KeystoneV3Internal, protocol]
+          - - get_param: [EndpointMap, KeystoneInternal, protocol]
             - ://
             - str_replace:
                 template:
-                  get_param: [EndpointMap, KeystoneV3Internal, host]
+                  get_param: [EndpointMap, KeystoneInternal, host]
                 params:
                   CLOUDNAME: {get_param: CloudName}
                   IP_ADDRESS: {get_param: KeystonePublicApiVirtualIP}
             - ':'
-            - get_param: [EndpointMap, KeystoneV3Internal, port]
+            - get_param: [EndpointMap, KeystoneInternal, port]
       KeystoneV3Public:
         host:
           str_replace:
             template:
-              get_param: [EndpointMap, KeystoneV3Public, host]
+              get_param: [EndpointMap, KeystonePublic, host]
             params:
               CLOUDNAME: {get_param: CloudName}
               IP_ADDRESS: {get_param: PublicVirtualIP}
         port:
-          get_param: [EndpointMap, KeystoneV3Public, port]
+          get_param: [EndpointMap, KeystonePublic, port]
         protocol:
-          get_param: [EndpointMap, KeystoneV3Public, protocol]
+          get_param: [EndpointMap, KeystonePublic, protocol]
         uri:
           list_join:
           - ''
-          - - get_param: [EndpointMap, KeystoneV3Public, protocol]
+          - - get_param: [EndpointMap, KeystonePublic, protocol]
             - ://
             - str_replace:
                 template:
-                  get_param: [EndpointMap, KeystoneV3Public, host]
+                  get_param: [EndpointMap, KeystonePublic, host]
                 params:
                   CLOUDNAME: {get_param: CloudName}
                   IP_ADDRESS: {get_param: PublicVirtualIP}
             - ':'
-            - get_param: [EndpointMap, KeystoneV3Public, port]
+            - get_param: [EndpointMap, KeystonePublic, port]
             - /v3
         uri_no_suffix:
           list_join:
           - ''
-          - - get_param: [EndpointMap, KeystoneV3Public, protocol]
+          - - get_param: [EndpointMap, KeystonePublic, protocol]
             - ://
             - str_replace:
                 template:
-                  get_param: [EndpointMap, KeystoneV3Public, host]
+                  get_param: [EndpointMap, KeystonePublic, host]
                 params:
                   CLOUDNAME: {get_param: CloudName}
                   IP_ADDRESS: {get_param: PublicVirtualIP}
             - ':'
-            - get_param: [EndpointMap, KeystoneV3Public, port]
+            - get_param: [EndpointMap, KeystonePublic, port]
       NeutronAdmin:
         host:
           str_replace:
