--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -1066,6 +1066,7 @@ resources:
         neutron_public_url: { get_param: [ EndpointMap, NeutronPublic, uri ] }
         neutron_admin_url: { get_param: [ EndpointMap, NeutronAdmin, uri ] }
         neutron_admin_auth_url: { get_param: [ EndpointMap, KeystoneAdmin, uri ] }
+        neutron_admin_auth_url_uri_no_suffix: { get_param: [ EndpointMap, KeystoneAdmin, uri_no_suffix ] }
         nova_internal_url: { get_param: [ EndpointMap, NovaInternal, uri ] }
         ceilometer_backend: {get_param: CeilometerBackend}
         ceilometer_metering_secret: {get_param: CeilometerMeteringSecret}
@@ -1401,8 +1402,9 @@ resources:
                 neutron::keystone::auth::password: {get_input: neutron_password }
                 neutron::keystone::auth::region: {get_input: keystone_region}
                 neutron::server::notifications::nova_url: {get_input: nova_internal_url}
-                neutron::server::notifications::auth_url: {get_input: neutron_admin_auth_url}
+                neutron::server::notifications::auth_url: {get_input: neutron_admin_auth_url_uri_no_suffix}
                 neutron::server::notifications::tenant_name: 'service'
+                neutron::server::notifications::project_name: 'service'
                 neutron::server::notifications::password: {get_input: nova_password}
 
                 # Ceilometer
