Cisco nexus config template - obsolete parameter (replay count).
Due to fix: https://bugs.launchpad.net/networking-cisco/+bug/1469839,
the replay count parameter is no longer used.  This needs to be
reflected in the Triple O templates.

Change-Id: I666c4394108287adcb4989e897ab3936667a602b
Closes-bug:  #1551387
(cherry picked from commit d1981582256c5fbe8beeaa87823225e7214bbff1)

--- a/puppet/extraconfig/all_nodes/neutron-ml2-cisco-nexus-ucsm.yaml
+++ b/puppet/extraconfig/all_nodes/neutron-ml2-cisco-nexus-ucsm.yaml
@@ -65,11 +65,18 @@ parameters:
     default: false
   NetworkNexusSwitchHeartbeatTime:
     type: number
-    description: Time interval to check the state of the Nexus device
+    description: >
+      Time interval to check the state of the Nexus device. The units of this
+      object are seconds.  Setting this object to a value of 0 disables the
+      replay feature.
     default: 0
   NetworkNexusSwitchReplayCount:
     type: number
-    description: Number of times to attempt config replay
+    description: >
+      This configuration item is OBSOLETE.  The Nexus driver replay behavior
+      is to continue to attempt to connect to the down Nexus device with a
+      period equal to the heartbeat time interval.  This was previously the
+      Number of times to attempt config replay.
     default: 3
   NetworkNexusProviderVlanAutoCreate:
     type: boolean
