--- a/extraconfig/tasks/major_upgrade_script_delivery.yaml
+++ b/extraconfig/tasks/major_upgrade_script_delivery.yaml
@@ -2,6 +2,7 @@ heat_template_version: 2014-10-16
 description: 'Upgrade for Pacemaker deployments'
 
 parameters:
+
   controller_servers:
     type: json
   compute_servers:
@@ -26,7 +27,7 @@ resources:
   # map_merge with input_values instead of feeding params into scripts
   # via str_replace on bash snippets
 
-  ControllerPacemakerUpgradeConfig_Step1:
+  ComputeDeliverUpgradeScriptConfig:
     type: OS::Heat::SoftwareConfig
     properties:
       group: script
@@ -39,31 +40,26 @@ resources:
                 upgrade_level_nova_compute='UPGRADE_LEVEL_NOVA_COMPUTE'
               params:
                 UPGRADE_LEVEL_NOVA_COMPUTE: {get_param: UpgradeLevelNovaCompute}
-          - get_file: pacemaker_common_functions.sh
-          - get_file: major_upgrade_controller_pacemaker_1.sh
+          - get_file: major_upgrade_compute.sh
 
-  ControllerPacemakerUpgradeDeployment_Step1:
+  ComputeDeliverUpgradeScriptDeployment:
     type: OS::Heat::SoftwareDeploymentGroup
     properties:
-      servers:  {get_param: controller_servers}
-      config: {get_resource: ControllerPacemakerUpgradeConfig_Step1}
+      servers:  {get_param: compute_servers}
+      config: {get_resource: ComputeDeliverUpgradeScriptConfig}
       input_values: {get_param: input_values}
 
-  ControllerPacemakerUpgradeConfig_Step2:
+
+  ObjectStoreDeliverUpgradeScriptConfig:
     type: OS::Heat::SoftwareConfig
     properties:
       group: script
-      config:
-        list_join:
-        - ''
-        - - get_file: pacemaker_common_functions.sh
-          - get_file: major_upgrade_controller_pacemaker_2.sh
+      config: {get_file: major_upgrade_object_storage.sh}
 
-  ControllerPacemakerUpgradeDeployment_Step2:
+  ObjectStoreDeliverUpgradeScriptDeployment:
     type: OS::Heat::SoftwareDeploymentGroup
-    depends_on: ControllerPacemakerUpgradeDeployment_Step1
     properties:
-      servers:  {get_param: controller_servers}
-      config: {get_resource: ControllerPacemakerUpgradeConfig_Step2}
+      servers:  {get_param: objectstorage_servers}
+      config: {get_resource: ObjectStoreDeliverUpgradeScriptConfig}
       input_values: {get_param: input_values}
 
