Store events in Ceilometer
Adds an option to toggle whether events are stored in Ceilometer.

The default is false and remains unchanged.

Change-Id: I9accb679b97cf7172c67f3cd5f218bdaee507c94
Related-Bug: rhbz#1312373
(cherry picked from commit 03c2316708cb268fb656a29c7882ba096179c1d5)

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -27,6 +27,10 @@ parameters:
     description: The password for the ceilometer service  and db account.
     type: string
     hidden: true
+  CeilometerStoreEvents:
+    default: false
+    description: Whether to store events in ceilometer.
+    type: boolean
   CinderApiVirtualIP:
     type: string
     default: ''
@@ -1083,6 +1087,7 @@ resources:
         ceilometer_backend: {get_param: CeilometerBackend}
         ceilometer_metering_secret: {get_param: CeilometerMeteringSecret}
         ceilometer_password: {get_param: CeilometerPassword}
+        ceilometer_store_events: {get_param: CeilometerStoreEvents}
         ceilometer_coordination_url:
           list_join:
             - ''
@@ -1442,6 +1447,7 @@ resources:
                 ceilometer::agent::auth::auth_password: {get_input: ceilometer_password}
                 ceilometer::agent::auth::auth_url: {get_input: keystone_auth_uri}
                 ceilometer::agent::central::coordination_url: {get_input: ceilometer_coordination_url}
+                ceilometer::agent::notification::store_events: {get_input: ceilometer_store_events}
                 ceilometer::db::mysql::password: {get_input: ceilometer_password}
                 snmpd_readonly_user_name: {get_input: snmpd_readonly_user_name}
                 snmpd_readonly_user_password: {get_input: snmpd_readonly_user_password}
